--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
 
     <p id="profile"></p>
     <fb:login-button
-      scope="public_profile,email"
+      scope="public_profile,mustafahaider508@gmail.com"
       onlogin="checkLoginState();"
-    ></fb:login-button
-    >;
+    ></fb:login-button>
 
     <script>
       window.fbAsyncInit = function () {
