--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <p id="profile"></p>
     <fb:login-button
-      scope="public_profile,mustafahaider508@gmail.com"
+      scope="public_profile,email"
       onlogin="checkLoginState();"
     ></fb:login-button>
 
